# dioxus-i18n

./: Cargo.toml
