[package]
name = "dioxus-i18n"
version = "0.2.5"
edition = "2021"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
description = "i18n integration for Dioxus apps based on Fluent Project."
license = "MIT"
repository = "https://github.com/dioxus-community/dioxus-i18n"
readme = "./README.md"
categories = ["accessibility", "gui", "localization", "internationalization"]

[dependencies]
dioxus-lib = { git = "https://github.com/DioxusLabs/dioxus", default-features = false, features = ["hooks", "macro", "signals"] }
fluent = "0.16.1"
unic-langid =  { version = "0.9.5", features = ["macros"] }
dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = ["web"] }

[dev-dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = ["web"] }
freya = "0.2"
unic-langid =  { version = "0.9.5", features = ["macros"] }